[package]
name = "github-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
simple_logger = "2.1.0"
sled = "0.34.7"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros"] }
